# gym-personalizer

./: .gitignore  README.md  ingest.py  pyproject.toml  retrieve.py
docs/: e2e_plan.html  presentation.md
fixtures/: sample_exercise_queries.json  sample_plan.json  sample_profile.json  sample_prompt.json  sample_retrieved_exercises.json
scripts/: e2e.py  smoke_build_query.py  smoke_intake.py  smoke_plan.py  smoke_query.py  smoke_query_and_retrieve.py  smoke_retrieval.py
src/gym_pt/: __init__.py  config.py
src/gym_pt/agents/: __init__.py  agents.py  messages.py  tools.py
src/gym_pt/models/: __init__.py  exercise.py  plan.py
src/gym_pt/railengine/: __init__.py  query_protocol.py  retrieval.py  sdk_patch.py
src/gym_pt/utils/: __init__.py  html.py
tests/: test_models.py  test_retrieval.py
